[package]
name = "kobold"
version = "0.1.0"
authors = ["Postrex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-redis = "0.9"
actix-web = "3.1"
anyhow = "1.0"
config = { version = "0.10", default-features = false, features = ["toml"] }
deadpool-postgres = "0.5"
env_logger = "0.7"
log = "0.4"
redis-async = "0.6"
serde = "1.0"
tokio-pg-mapper = "0.1"
tokio-postgres = "0.5"
casey = "0.3"

[dev-dependencies]
cargo-about = "0.2"